--- a/UCSB_Usage.ipynb
+++ b/UCSB_Usage.ipynb
@@ -31,7 +31,7 @@
     "from requests.auth import HTTPBasicAuth\n",
     "\n",
     "# Use an organization admin API key. Must be sitting within the parent organization if you are collecting information about suborgs\n",
-    "os.environ['PL_API_KEY']='' \n",
+    "# os.environ['PL_API_KEY']='' \n",
     "PLANET_API_KEY = os.getenv('PL_API_KEY')\n",
     "\n",
     "# Input the contract and start and end dates\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -66,10 +66,22 @@
        " {'Report_Type': 'summary',\n",
        "  'Cadence': 'daily',\n",
        "  'SubOrgs': {'Include': 'all'},\n",
-       "  'Toi': {'start_date': '2023-10-29', 'end_date': '2024-01-27'}}]"
+       "  'Toi': {'start_date': '2023-10-29', 'end_date': '2024-01-27'}},\n",
+       " {'Report_Type': 'summary',\n",
+       "  'Cadence': 'daily',\n",
+       "  'SubOrgs': {'Include': 'all'},\n",
+       "  'Toi': {'start_date': '2024-01-27', 'end_date': '2024-04-26'}},\n",
+       " {'Report_Type': 'summary',\n",
+       "  'Cadence': 'daily',\n",
+       "  'SubOrgs': {'Include': 'all'},\n",
+       "  'Toi': {'start_date': '2024-04-26', 'end_date': '2024-07-25'}},\n",
+       " {'Report_Type': 'summary',\n",
+       "  'Cadence': 'daily',\n",
+       "  'SubOrgs': {'Include': 'all'},\n",
+       "  'Toi': {'start_date': '2024-07-25', 'end_date': '2024-10-23'}}]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,6 +142,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "scrolled": true
@@ -139,22 +158,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Request 1 successful\n",
-      "Request 1 is in progress (Attempt 1)\n",
-      "Request 1 is completed\n",
-      "CSV file 1 for request 1 saved as UCSB_Usage\\result_1_1.csv\n",
-      "Request 2 successful\n",
-      "Request 2 is in progress (Attempt 1)\n",
-      "Request 2 is completed\n",
-      "CSV file 1 for request 2 saved as UCSB_Usage\\result_2_1.csv\n",
-      "Request 3 successful\n",
-      "Request 3 is in progress (Attempt 1)\n",
-      "Request 3 is completed\n",
-      "CSV file 1 for request 3 saved as UCSB_Usage\\result_3_1.csv\n",
-      "Request 4 successful\n",
-      "Request 4 is in progress (Attempt 1)\n",
-      "Request 4 is completed\n",
-      "CSV file 1 for request 4 saved as UCSB_Usage\\result_4_1.csv\n"
+      "Request 1 failed with status code 401\n",
+      "Request 2 failed with status code 401\n",
+      "Request 3 failed with status code 401\n",
+      "Request 4 failed with status code 401\n",
+      "Request 5 failed with status code 401\n",
+      "Request 6 failed with status code 401\n",
+      "Request 7 failed with status code 401\n"
      ]
     }
    ],
@@ -251,213 +261,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(PLANET_API_KEY)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>User_Email</th>\n",
-       "      <th>Organization_Name</th>\n",
-       "      <th>Plan_ID</th>\n",
-       "      <th>Item_Type</th>\n",
-       "      <th>Download_Area__sqkm_</th>\n",
-       "      <th>Quota_Used__sqkm_</th>\n",
-       "      <th>footprint</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-02-10</td>\n",
-       "      <td>jonjab@ucsb.edu</td>\n",
-       "      <td>E&amp;R University of California, Santa Barbara (C...</td>\n",
-       "      <td>709685</td>\n",
-       "      <td>PSScene</td>\n",
-       "      <td>1627.299485</td>\n",
-       "      <td>542.433162</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2023-02-13</td>\n",
-       "      <td>jonjab@ucsb.edu</td>\n",
-       "      <td>E&amp;R University of California, Santa Barbara (C...</td>\n",
-       "      <td>709685</td>\n",
-       "      <td>PSScene</td>\n",
-       "      <td>2316.580978</td>\n",
-       "      <td>772.193659</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2023-03-15</td>\n",
-       "      <td>jonjab@ucsb.edu</td>\n",
-       "      <td>E&amp;R University of California, Santa Barbara (C...</td>\n",
-       "      <td>709685</td>\n",
-       "      <td>PSScene</td>\n",
-       "      <td>3163.775619</td>\n",
-       "      <td>1054.591873</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2023-04-11</td>\n",
-       "      <td>xiafeizhao@ucsb.edu</td>\n",
-       "      <td>Geomorph - UCSB</td>\n",
-       "      <td>711691</td>\n",
-       "      <td>REOrthoTile</td>\n",
-       "      <td>10838.004515</td>\n",
-       "      <td>394.427030</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2023-04-19</td>\n",
-       "      <td>xiafeizhao@ucsb.edu</td>\n",
-       "      <td>Geomorph - UCSB</td>\n",
-       "      <td>711691</td>\n",
-       "      <td>REOrthoTile</td>\n",
-       "      <td>540.660014</td>\n",
-       "      <td>51.441998</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>182</th>\n",
-       "      <td>2023-11-02</td>\n",
-       "      <td>grit-planetlabs@ucsb.edu</td>\n",
-       "      <td>Planet Data Archive</td>\n",
-       "      <td>726011</td>\n",
-       "      <td>PSScene</td>\n",
-       "      <td>9480.880000</td>\n",
-       "      <td>3160.290000</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>183</th>\n",
-       "      <td>2023-11-03</td>\n",
-       "      <td>grit-planetlabs@ucsb.edu</td>\n",
-       "      <td>Planet Data Archive</td>\n",
-       "      <td>726011</td>\n",
-       "      <td>PSScene</td>\n",
-       "      <td>17065.580000</td>\n",
-       "      <td>5688.530000</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>184</th>\n",
-       "      <td>2023-11-07</td>\n",
-       "      <td>grit-planetlabs@ucsb.edu</td>\n",
-       "      <td>Planet Data Archive</td>\n",
-       "      <td>726011</td>\n",
-       "      <td>PSScene</td>\n",
-       "      <td>10102.420000</td>\n",
-       "      <td>3367.470000</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>185</th>\n",
-       "      <td>2023-11-08</td>\n",
-       "      <td>grit-planetlabs@ucsb.edu</td>\n",
-       "      <td>Planet Data Archive</td>\n",
-       "      <td>726011</td>\n",
-       "      <td>PSScene</td>\n",
-       "      <td>8374.250000</td>\n",
-       "      <td>2791.420000</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>186</th>\n",
-       "      <td>2023-11-09</td>\n",
-       "      <td>grit-planetlabs@ucsb.edu</td>\n",
-       "      <td>Planet Data Archive</td>\n",
-       "      <td>726011</td>\n",
-       "      <td>PSScene</td>\n",
-       "      <td>56869.360000</td>\n",
-       "      <td>18956.450000</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>187 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           Date                User_Email  \\\n",
-       "0    2023-02-10           jonjab@ucsb.edu   \n",
-       "1    2023-02-13           jonjab@ucsb.edu   \n",
-       "2    2023-03-15           jonjab@ucsb.edu   \n",
-       "3    2023-04-11       xiafeizhao@ucsb.edu   \n",
-       "4    2023-04-19       xiafeizhao@ucsb.edu   \n",
-       "..          ...                       ...   \n",
-       "182  2023-11-02  grit-planetlabs@ucsb.edu   \n",
-       "183  2023-11-03  grit-planetlabs@ucsb.edu   \n",
-       "184  2023-11-07  grit-planetlabs@ucsb.edu   \n",
-       "185  2023-11-08  grit-planetlabs@ucsb.edu   \n",
-       "186  2023-11-09  grit-planetlabs@ucsb.edu   \n",
-       "\n",
-       "                                     Organization_Name  Plan_ID    Item_Type  \\\n",
-       "0    E&R University of California, Santa Barbara (C...   709685      PSScene   \n",
-       "1    E&R University of California, Santa Barbara (C...   709685      PSScene   \n",
-       "2    E&R University of California, Santa Barbara (C...   709685      PSScene   \n",
-       "3                                      Geomorph - UCSB   711691  REOrthoTile   \n",
-       "4                                      Geomorph - UCSB   711691  REOrthoTile   \n",
-       "..                                                 ...      ...          ...   \n",
-       "182                                Planet Data Archive   726011      PSScene   \n",
-       "183                                Planet Data Archive   726011      PSScene   \n",
-       "184                                Planet Data Archive   726011      PSScene   \n",
-       "185                                Planet Data Archive   726011      PSScene   \n",
-       "186                                Planet Data Archive   726011      PSScene   \n",
-       "\n",
-       "     Download_Area__sqkm_  Quota_Used__sqkm_  footprint  \n",
-       "0             1627.299485         542.433162        NaN  \n",
-       "1             2316.580978         772.193659        NaN  \n",
-       "2             3163.775619        1054.591873        NaN  \n",
-       "3            10838.004515         394.427030        NaN  \n",
-       "4              540.660014          51.441998        NaN  \n",
-       "..                    ...                ...        ...  \n",
-       "182           9480.880000        3160.290000        NaN  \n",
-       "183          17065.580000        5688.530000        NaN  \n",
-       "184          10102.420000        3367.470000        NaN  \n",
-       "185           8374.250000        2791.420000        NaN  \n",
-       "186          56869.360000       18956.450000        NaN  \n",
-       "\n",
-       "[187 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Get a list of all CSV files in the directory\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
     }
    ],
    "source": [
@@ -487,7 +320,10 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "scrolled": false
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -662,14 +498,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -683,9 +524,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
